force-app/main/default/objects/clofor_com_cfs__ACBalance__c/clofor_com_cfs__ACBalance__c.object-meta.xml
<CustomObject>
    <label>A/C Bal</label>
    <nameField>
        <displayFormat>ACB-{000000}</displayFormat>
        <label>A/C BALANCE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A/C Bal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>