force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__AccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AccountingCode__c</fullName>
    <label>ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>A/C BALANCE</relationshipLabel>
    <relationshipName>ACBalance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>