force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__Active__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACTIVE</label>
    <type>Checkbox</type>
</CustomField>