force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__BankCashAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankCashAccountNumber__c</fullName>
    <formula>clofor_com_cfs__BankCashAccountID__r.clofor_com_cfs__BankAccountNumber__c</formula>
    <label>BANK/CASH ACCOUNT NUMBER</label>
    <type>Text</type>
</CustomField>