force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__ClosingBalanceLocalCredit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ClosingBalanceLocalCredit__c</fullName>
    <label>CLOSING BALANCE-LOCAL CREDIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>