force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__ClosingBalanceUSDCredit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ClosingBalanceUSDCredit__c</fullName>
    <label>CLOSING BALANCE-USD CREDIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>