force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__DebitCreditDecisionUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DebitCreditDecisionUSD__c</fullName>
    <label>DEBIT/CREDIT DECISION-USD CURRENCY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>