force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EmployeeID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EMPLOYEE ID</label>
    <referenceTo>clofor_com_cfs__Employee__c</referenceTo>
    <relationshipLabel>A/C BAL</relationshipLabel>
    <relationshipName>ACBalance</relationshipName>
    <type>Lookup</type>
</CustomField>