force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__EmplyoeeFullName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EmplyoeeFullName__c</fullName>
    <formula>clofor_com_cfs__EmployeeID__r.clofor_com_cfs__Full_Name__c</formula>
    <label>EMPLOYEE FULL NAME</label>
    <type>Text</type>
</CustomField>