force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__InsurancePaymentType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InsurancePaymentType__c</fullName>
    <label>INSURANCE PAYMENT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__InsurancePaymentType</valueSetName>
    </valueSet>
</CustomField>