force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__mUSDAmountDebitCreditDecision__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__mUSDAmountDebitCreditDecision__c</fullName>
    <formula>clofor_com_cfs__OpeningBalanceUSDDebit__c - clofor_com_cfs__OpeningBalanceUSDCredit__c + clofor_com_cfs__TransactionBalanceUSDDebit__c - clofor_com_cfs__TransactionBalanceUSDCredit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>mUSDAmountDebitCreditDecision</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>