force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__OpeningBalanceUSDDebit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OpeningBalanceUSDDebit__c</fullName>
    <label>OPENING BALANCE-USD DEBIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>