force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__ParentAccountingCodeBalance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ParentAccountingCodeBalance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT ACCOUNTING CODE-BALANCE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>A/C BALANCE (CHILD ACCOUNTING CODE-BALANCE)</relationshipLabel>
    <relationshipName>ParentAccountingCodeBalance</relationshipName>
    <type>Lookup</type>
</CustomField>