force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__RollupActualAmountOfCashInUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupActualAmountOfCashInUSD__c</fullName>
    <label>ROLLUP ACTUAL AMOUNT OF CASH-IN(USD)</label>
    <summarizedField>clofor_com_cfs__CashACBal__c.clofor_com_cfs__ActualAmountOfCashInUSDACBal__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__CashACBal__c.clofor_com_cfs__ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>