force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__RollupAmountPaidLocalBank__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupAmountPaidLocalBank__c</fullName>
    <label>ROLLUP AMOUNT PAID(LOCAL)-BANK</label>
    <summarizedField>clofor_com_cfs__BankACBal__c.clofor_com_cfs__AmountPaidLocalACBal__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__BankACBal__c.clofor_com_cfs__ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>