force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__RollUpChildACBalance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollUpChildACBalance__c</fullName>
    <label>ROLL-UP CHILD A/C BALANCE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__RollUpChildACBalance</valueSetName>
    </valueSet>
</CustomField>