force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__RollupDepositAmountReceivedLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupDepositAmountReceivedLocal__c</fullName>
    <label>ROLLUP DEPOSIT AMOUNT RECEIVED(LOCAL)</label>
    <summarizedField>clofor_com_cfs__DepositACBal__c.clofor_com_cfs__AmountReceivedLocalACBal__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__DepositACBal__c.clofor_com_cfs__ACBalID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>