force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__RollupFMSUNpaidBuyingBalUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupFMSUNpaidBuyingBalUSD__c</fullName>
    <label>ROLLUP FMS UNPAID BUYING BAL(USD)</label>
    <summarizedField>clofor_com_cfs__FMSBillACBal__c.clofor_com_cfs__UnpaidBalanceOfBuyingUSDACBal__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__FMSBillACBal__c.clofor_com_cfs__ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>