force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__RollupFMSUnreceivedSellBalLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupFMSUnreceivedSellBalLocal__c</fullName>
    <label>ROLLUP FMS UNRECEIVED SELLING BAL(LOCAL)</label>
    <summarizedField>clofor_com_cfs__FMSBillACBal__c.clofor_com_cfs__UnreceivedBalanceOfSellingLocalACBal__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__FMSBillACBal__c.clofor_com_cfs__ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>