force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__RollupLoanPaid__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupLoanPaid__c</fullName>
    <label>ROLLUP LOAN PAID</label>
    <summarizedField>clofor_com_cfs__LoanPayACBal__c.clofor_com_cfs__AmountPaidACBal__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__LoanPayACBal__c.clofor_com_cfs__ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>