force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__RollupOtherRevenueDifference__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupOtherRevenueDifference__c</fullName>
    <label>ROLLUP OTHER REV DIFFERENCE</label>
    <summarizedField>clofor_com_cfs__OtherACBal__c.clofor_com_cfs__RevenueDifferenceACBal__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__OtherACBal__c.clofor_com_cfs__ACBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>