force-app/main/default/objects/clofor_com_cfs__ACBalance__c/fields/clofor_com_cfs__TransactionBalanceLocalDebit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TransactionBalanceLocalDebit__c</fullName>
    <label>TRANSACTION BALANCE-LOCAL DEBIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>