force-app/main/default/objects/clofor_com_cfs__ACBalance__c/recordTypes/clofor_com_cfs__CashInBank.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CashInBank</fullName>
    <active>true</active>
    <label>Cash In Bank</label>
</RecordType>