force-app/main/default/objects/clofor_com_cfs__ACBalance__c/recordTypes/clofor_com_cfs__CashInBankUSD.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CashInBankUSD</fullName>
    <active>true</active>
    <label>Cash In Bank-USD Currency</label>
</RecordType>