force-app/main/default/objects/clofor_com_cfs__ACBalance__c/recordTypes/clofor_com_cfs__CashOnHand.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CashOnHand</fullName>
    <active>true</active>
    <label>Cash On Hand</label>
</RecordType>