force-app/main/default/objects/clofor_com_cfs__ACBalance__c/recordTypes/clofor_com_cfs__CashOnHandUSD.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CashOnHandUSD</fullName>
    <active>true</active>
    <label>Cash On Hand-USD Currency</label>
</RecordType>