force-app/main/default/objects/clofor_com_cfs__ACBalance__c/recordTypes/clofor_com_cfs__HSUInsurance.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__HSUInsurance</fullName>
    <active>true</active>
    <description>Health, Social, Unemployment Insurance</description>
    <label>H/S/U Insurance</label>
</RecordType>