force-app/main/default/objects/clofor_com_cfs__ACBalance__c/recordTypes/clofor_com_cfs__PayableToEmploye.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__PayableToEmploye</fullName>
    <active>true</active>
    <label>Payable To Employee</label>
</RecordType>