force-app/main/default/objects/clofor_com_cfs__ACBalance__c/recordTypes/clofor_com_cfs__PayableToVendor.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__PayableToVendor</fullName>
    <active>true</active>
    <label>Payable To Vendor</label>
</RecordType>