force-app/main/default/objects/clofor_com_cfs__ACBalance__c/recordTypes/clofor_com_cfs__ReceivableFromCustomer.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ReceivableFromCustomer</fullName>
    <active>true</active>
    <label>Receivable From Customer</label>
</RecordType>