force-app/main/default/objects/clofor_com_cfs__ACBalance__c/recordTypes/clofor_com_cfs__ReceivableFromEmployee.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ReceivableFromEmployee</fullName>
    <active>true</active>
    <label>Receivable From Employee</label>
</RecordType>