force-app/main/default/objects/clofor_com_cfs__ACBalance__c/recordTypes/clofor_com_cfs__Standard.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Standard</fullName>
    <active>true</active>
    <label>Standard</label>
</RecordType>