force-app/main/default/objects/clofor_com_cfs__ACBalance__c/recordTypes/clofor_com_cfs__ValueAddedTaxVAT.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ValueAddedTaxVAT</fullName>
    <active>true</active>
    <label>Value Added Tax (VAT)</label>
</RecordType>