force-app/main/default/objects/clofor_com_cfs__ACBalance__c/recordTypes/clofor_com_cfs__VATDeducted.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__VATDeducted</fullName>
    <active>true</active>
    <label>VAT Deducted</label>
</RecordType>