force-app/main/default/objects/clofor_com_cfs__ACBalance__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__BalanceType__c</columns>
    <columns>clofor_com_cfs__StartDate__c</columns>
    <columns>clofor_com_cfs__EndDate__c</columns>
    <columns>clofor_com_cfs__OpeningBalanceLocalDebit__c</columns>
    <columns>clofor_com_cfs__OpeningBalanceLocalCredit__c</columns>
    <columns>clofor_com_cfs__TransactionBalanceLocalDebit__c</columns>
    <columns>clofor_com_cfs__TransactionBalanceLocalCredit__c</columns>
    <columns>clofor_com_cfs__ClosingBalanceLocalDebit__c</columns>
    <columns>clofor_com_cfs__ClosingBalanceLocalCredit__c</columns>
    <columns>clofor_com_cfs__ParentACBalance__c</columns>
    <columns>clofor_com_cfs__AccountingCode__c</columns>
    <columns>clofor_com_cfs__ParentAccountingCodeBalance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>