force-app/main/default/objects/clofor_com_cfs__ACBalance__c/listViews/clofor_com_cfs__CashOnHandUSD.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__CashOnHandUSD</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__BalanceType__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__BankCashAccountID__c</columns>
    <columns>clofor_com_cfs__BankCashAccountNumber__c</columns>
    <columns>clofor_com_cfs__StartDate__c</columns>
    <columns>clofor_com_cfs__EndDate__c</columns>
    <columns>clofor_com_cfs__AccountingCode__c</columns>
    <columns>clofor_com_cfs__OpeningBalanceLocalDebit__c</columns>
    <columns>clofor_com_cfs__OpeningBalanceLocalCredit__c</columns>
    <columns>clofor_com_cfs__TransactionBalanceLocalDebit__c</columns>
    <columns>clofor_com_cfs__TransactionBalanceLocalCredit__c</columns>
    <columns>clofor_com_cfs__ClosingBalanceLocalDebit__c</columns>
    <columns>clofor_com_cfs__ClosingBalanceLocalCredit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__ACBalance__c.clofor_com_cfs__CashOnHandUSD</value>
    </filters>
    <filters>
        <field>clofor_com_cfs__Currency__c</field>
        <operation>equals</operation>
        <value>USD</value>
    </filters>
    <label>CASH ON HAND-USD CURRENCY</label>
    <language>en_US</language>
</ListView>